fixed size discrepancies in homepage widget, and fixed search bar being too big

--- a/frontend/src/components/chartbox/chartbox.css
+++ b/frontend/src/components/chartbox/chartbox.css
@@ -4,7 +4,7 @@
     padding: 30px;
     border-radius:10px;
     cursor:pointer;
-    max-height: 25vh;
+   max-height: 28vh;
     overflow: visible;
 
     -webkit-box-shadow:0px 0px 0px 11px -1px #000000;
